# llm-platform-template

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  security.yml
app/: __init__.py  main.py
app/agent/: graph.py  llm.py  prompts.py  state.py
app/agent/guardrails/: input.py  pipeline.py
app/agent/tools/: search_aids.py
app/api/: deps.py
app/api/routes/: chat.py  health.py
app/core/: config.py  logging.py  telemetry.py
data/: aids_sample.json
docs/: DESIGN.md
gateway/: litellm.ci.yaml  litellm.config.yaml
scripts/: check_commit_msg.py  init-db.sh  smoke.sh
tests/: conftest.py
tests/integration/: test_chat_api.py
tests/unit/: test_auth.py  test_chat.py  test_config.py  test_graph.py  test_guardrails.py  test_health.py  test_llm_fallback.py  test_logging.py  test_main.py  test_placeholder.py  test_search_aids.py  test_telemetry.py
